# SafeBronc-Backend

./: .gitignore  API_layer.h  CMakeLists.txt  Controller.h  README.md  app.js  event.cpp  event.h  expireTime.cpp  expireTime.h  location.h  login.h  package-lock.json  package.json  panic-button-text.js  resources.h  safebronc.session.sql  server.js  verification.js
functions/REST/: createEvent.js  deleteEvent.js  runAlert.js  updateEvent.js
functions/generic/: database.js  messageSender.js
